@@ -1,5 +1,10 @@
 0.22.9	UNRELEASED
 
+ * Fix ``LocalGitClient`` assertion error when fetching externally cloned repositories
+   into ``MemoryRepo``. Previously, the client would fail with an AssertionError
+   when trying to process pack data from repositories that were cloned externally.
+   (Jelmer Vernooĳ, #1179)
+
  * Add support for ``format`` argument to ``Repo.init()`` and ``Repo.init_bare()``
    to specify repository format version (0 or 1). This allows creating repositories
    with different format versions by setting the ``core.repositoryformatversion``
